[package]
name = "for-offline-use"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
tokio = { "version" = "1.4.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.8.3"
reqwest = { "version" = "0.11.2", features = ["json"] }
serde = { "version" = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
clap = "2.33.3"
chrono = "0.4.19"
toml = "0.5.8"
log4rs = "1.0.0"
tempfile = "3.2.0"
image = "0.23.14"
ssh = "0.1.4"
expanduser = "1.2.2"
bitreader = "0.3.4"
csv = "1.1.6"
